metalb/demo.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-demo-lb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-demo-lb
  namespace: kube-demo-lb
  labels:
    app: kube-demo-lb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-demo-lb
  template:
    metadata:
      labels:
        app: kube-demo-lb
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kube-demo-lb
  namespace: kube-demo-lb
spec:
  selector:
    app: kube-demo-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
