metalb/server-repli.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-demo-lb

---

apiVersion: v1
kind: Service
metadata:
  name: kube-demo-lb
  namespace: kube-demo-lb
spec:
  selector:
    app: kube-demo-lb
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
