metalb/service.yml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-demo-lb

---

apiVersion: v1
kind: Service
metadata:
  name: replacaset-nginx-systems
  namespace: kube-demo-lb
spec:
  selector:
    app: replacaset-nginx-systems
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
