metalb/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fruits
  namespace: fruit
spec:
  ingressClassName: nginx
  rules:
    - host: banana.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
